--- a/ZipR/ZipR/Base.lproj/Main.storyboard
+++ b/ZipR/ZipR/Base.lproj/Main.storyboard
@@ -18,14 +18,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageBoardCell" id="Ne7-3r-pOZ" customClass="MessageBoardTableViewCell" customModule="ZipR" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="152.33332824707031"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="186.33332824707031"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ne7-3r-pOZ" id="vfY-Ea-ZLu">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="152.33332824707031"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="186.33332824707031"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="GQ5-9i-T27">
-                                            <rect key="frame" x="20" y="21" width="374" height="80.333333333333329"/>
+                                            <rect key="frame" x="20" y="20.999999999999993" width="374" height="114.33333333333331"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pAO-Ic-X83">
                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="18"/>
@@ -45,11 +45,11 @@
                                                     </subviews>
                                                 </stackView>
                                                 <view contentMode="scaleToFill" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="se7-ND-t7g" customClass="TagListView" customModule="TagListView">
-                                                    <rect key="frame" x="0.0" y="26" width="374" height="16.333333333333329"/>
+                                                    <rect key="frame" x="0.0" y="26.000000000000004" width="374" height="50.333333333333343"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iyf-94-REs">
-                                                    <rect key="frame" x="0.0" y="50.333333333333329" width="374" height="30"/>
+                                                    <rect key="frame" x="0.0" y="84.333333333333329" width="374" height="30"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -57,7 +57,7 @@
                                             </subviews>
                                         </stackView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lK3-VM-6Yb">
-                                            <rect key="frame" x="374.66666666666669" y="106.33333333333333" width="19.333333333333314" height="29.999999999999986"/>
+                                            <rect key="frame" x="374.66666666666669" y="140.33333333333334" width="19.333333333333314" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="hFR-mU-Vd5"/>
                                                 <constraint firstAttribute="width" constant="19.329999999999998" id="wSK-5H-lOK"/>
@@ -69,7 +69,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kBj-Y2-ODk" userLabel="Comment button">
-                                            <rect key="frame" x="20" y="106.33333333333333" width="35" height="29.999999999999986"/>
+                                            <rect key="frame" x="20" y="140.33333333333334" width="35" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="DCK-dF-JxQ"/>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="JJn-5C-1va"/>
